# Formatta

./: .gitignore  CHANGELOG.md  Formatta.cabal  LICENSE  MattaFormatter.cabal  README.md  flake.nix  formatta.cabal  package-lock.json  package.yaml  stack.yaml
.github/workflows/: cli-release.yml
cli/: Formatta.cabal  Main.hs  MattaFormatter.cabal
cli/Commands/: Help.hs
cli/commands/: Toggle.hs
cli/src/: Main.hs
hs-core/: Formatta.hs  Main.hs
vscode-extension/: .vscodeignore  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: downloadFormattaBinary.ts  extension.ts
vscode-extension/src/helper/: monad.ts
