cabal-version:       >=1.10
name:                formatta
version:             0.1.0.0
build-type:          Simple

library
  exposed-modules:     Formatta
  build-depends:       base >=4.7 && <5
  default-language:    Haskell2010
  hs-source-dirs:      hs-core

executable formatta-cli
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5
  default-language:    Haskell2010
  hs-source-dirs:      hs-core
  other-modules:       Formatta
