cabal-version:       2.2

name:                MattaFormatter
version:             0.1.0.0
-- synopsis:
description:         “hold on” to your formatting — just 待った!✋
homepage:            https://github.com/githubuser/MattaFormatter#readme
license:             MIT
license-file:        LICENSE
author:              Ayato
maintainer:          a.shiga73@gmail.com
copyright:           2025 Ayato
category:            Tools
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable MattaFormatter
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       directory,
                       filepath,
                       bytestring
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
