cabal-version:       2.2

name:                Formatta
version:             0.1.0.0
description:         “hold on” to your formatting — just 待った!✋
homepage:            https://github.com/githubuser/MattaFormatter#readme
license:             MIT
author:              Ayato
maintainer:          a.shiga73@gmail.com
copyright:           2025 Ayato
category:            Tools
build-type:          Simple

executable Formatta
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       directory,
                       filepath,
                       bytestring
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
